# motheroffline

./: .gitignore  Cargo.toml  README.md  test_benchmark.py
example/: example.py
src/: distance.rs  index.rs  ivf.rs  lib.rs  main.rs  vector.rs
