[package]
name = "motheroffline"
version = "0.2.0"
edition = "2024"

[lib]
name = "motheroffline"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
rand = "0.8"  # <- required for IVF random sampling
csv = "1.3"
serde = {version = "1.0", features= ["derive"]}
rayon = "1.8"

[package.metadata.maturin]
name = "motheroffline"
